--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,14 @@ flask_sqlalchemy==3.0.5
 pip==23.3
 gunicorn==21.2.0
 flask-bcrypt>=1.0
+faker=="19.6.2"
+flask-restful>="0.3.10"
+sqlalchemy-serializer=="1.4.1"
+blinker==1.6.2
+click==8.1.7
+Flask-Migrate==4.0.5
+alembic==1.12.0; python_version >='3.7'
+flask-cors==4.0.0
+bcrypt==4.0.1; python_version >= '3.6'
+
+
