--- a/Pipfile
+++ b/Pipfile
@@ -4,21 +4,22 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "==2.2.5"
-flask-migrate = "==4.0.5"
-flask-bcrypt = ">=1.0"
-faker = "==\"19.6.2\""
-flask-restful = "==\"0.3.10\""
-gunicorn = "==21.2.0"
+flask = "*"
+flask-migrate = "*"
+flask-bcrypt = "*"
+faker = "*"
+flask-restful = "*"
+gunicorn = "*"
+flask-sqlalchemy = "*"
+sqlalchemy-serializer = "*"
+sqlalchemy = "*"
+alembic = "*"
+bcrypt = "*"
+flask-cors = "*"
+click = "*"
+blinker = "*"
 psycopg2-binary = "*"
-flask-sqlalchemy = "==3.0.5"
-sqlalchemy-serializer = "==\"1.4.1\""
-sqlalchemy = "==2.0.16"
-blinker = "==1.6.2"
-click = "==8.1.7"
-alembic = "==1.12.0"
-flask-cors = "==4.0.0"
-bcrypt = "==4.0.1"
+honcho = "*"
 
 [dev-packages]
 
