--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,26 @@
-Flask==2.2.5
-SQLAlchemy==2.0.16
-flask_sqlalchemy==3.0.5
-pip==23.3
-gunicorn==21.2.0
-flask-bcrypt>=1.0
-faker=="19.6.2"
-flask-restful>="0.3.10"
-sqlalchemy-serializer=="1.4.1"
-blinker==1.6.2
-click==8.1.7
-Flask-Migrate==4.0.5
-alembic==1.12.0; python_version >='3.7'
-flask-cors==4.0.0
-bcrypt==4.0.1; python_version >= '3.6'
+[[source]]
+url = "https://pypi.org/simple"
+verify_ssl = true
+name = "pypi"
 
+[packages]
+flask = "==2.2.5"
+flask-migrate = "==4.0.5"
+flask-bcrypt = ">=1.0"
+faker = "*"
+flask-restful = "==0.3.10"
+gunicorn = "==21.2.0"
+psycopg2-binary = "*"
+flask-sqlalchemy = "==3.0.5"
+sqlalchemy-serializer = "*"
+sqlalchemy = "==2.0.16"
+blinker = "==1.6.2"
+click = "==8.1.7"
+alembic = "==1.12.0"
+flask-cors = "==4.0.0"
+bcrypt = "==4.0.1"
 
+[dev-packages]
+
+[requires]
+python_version = "3.11"
