--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 -i https://pypi.org/simple
 alembic==1.12.0; python_version >= '3.7'
 aniso8601==9.0.1
+bcrypt==4.0.1; python_version >= '3.6'
 blinker==1.6.3; python_version >= '3.7'
 click==8.1.7; python_version >= '3.7'
 faker==19.10.0; python_version >= '3.8'
